# MGLEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  RenderingEngine.sln  Startup.bat  flake.nix  premake5.lua
.github/workflows/: build-check-x86_64-linux.yaml
Application/: Application.vcxproj
Application/src/: Application.cpp  Main.cpp
RenderingEngine/: Application.cpp  Core.h  RenderingEngine.vcxproj  mxpch.cpp
RenderingEngine/Core/: Bootstrapper.cpp  Bootstrapper.h  EntryPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Window.cpp  Window.h
RenderingEngine/Core/Layer/: Layer.h  LayerStack.h
RenderingEngine/Core/Layer/ImGui/: GuiLayer.cpp  GuiLayer.h
RenderingEngine/Core/Layer/Scene/: SceneLayer.cpp  SceneLayer.h
RenderingEngine/Core/Logger/: Log.cpp  Log.h
RenderingEngine/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
RenderingEngine/Renderer/: Camera.cpp  Camera.h  Mesh.cpp  RenderBuffer.cpp  RenderBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h
RenderingEngine/Resources/Shaders/: quad.frag  quad.vert  standart.frag  standart.vert
RenderingEngine/src/: Core.h  mxpch.h
RenderingEngine/src/Core/: Bootstrapper.cpp  Bootstrapper.h  Engine.h  EntryPoint.h  Window.cpp  Window.h
RenderingEngine/src/Core/Logger/: Log.cpp  Log.h
RenderingEngine/src/Events/: Event.h  KeyEvent.h
Resources/Images/: pop_cat.jfif
Resources/Persistence/: Scene.scene
Resources/Shaders/: areaLight.frag  areaLight.vert  default.frag  default.vert  shadowMap.vert  skybox.frag  skybox.vert
src/: RendererEngine.h  main.cpp  mxpch.h
src/Editor/: EditorLayer.cpp  EditorLayer.h
src/Editor/Persistence/: SceneSerializer.cpp  SceneSerializer.h
src/Editor/Resources/Models/: baseballbat_mesh.fbx
src/Editor/Resources/Shaders/: default.frag  default.vert  quad.frag  quad.vert
src/Editor/Scene/: ComponentRegistry.h  Entity.cpp  Entity.h  GuiRenderer.cpp  GuiRenderer.h  Scene.cpp  Scene.h  SceneLayer.cpp  SceneLayer.h  SceneRenderer.cpp  SceneRenderer.h
src/Renderer/Components/: AreaLighting.cpp  AreaLighting.h  Camera.cpp  Camera.h  Framebuffer.cpp  Material.cpp  Material.h  Mesh.cpp  Model.cpp  Model.h  RenderBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  VertexArray.cpp  VertexArray.h
src/Renderer/Core/: Bootstrapper.cpp  Bootstrapper.h  Input.h  Window.cpp  Window.h
src/Renderer/Core/Layer/: Layer.h
src/Renderer/Core/Layer/ImGui/: GuiLayer.cpp  GuiLayer.h
src/Renderer/Events/: Event.h
src/RendererEngine/: Core.h
src/RendererEngine/Components/: AreaLighting.cpp  AreaLighting.h  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Framebuffer.cpp  Framebuffer.h  Material.cpp  Material.h  MaterialImporter.cpp  MaterialImporter.h  Mesh.cpp  Mesh.h  MeshImporter.cpp  MeshImporter.h  Model.cpp  Model.h  RenderBuffer.cpp  RenderBuffer.h  RenderCamera.cpp  RenderCamera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureImporter.cpp  TextureImporter.h  Transform.cpp  Transform.h  VertexArray.cpp  VertexArray.h
src/RendererEngine/Core/: Bootstrapper.cpp  Bootstrapper.h  Input.cpp  Input.h  Math.cpp  Math.h  Time.h  Window.cpp  Window.h
src/RendererEngine/Core/Layer/: Layer.h  LayerStack.cpp
src/RendererEngine/Core/Layer/ImGui/: GuiLayer.cpp  GuiLayer.h
src/RendererEngine/Core/Logger/: Log.cpp  Log.h
src/RendererEngine/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
